--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,7 +57,17 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
+
+    //Remote dependencies for unit testing
+    testImplementation 'org.jetbrains.kotlin:kotlin-stdlib:1.6.10'
+    testImplementation 'org.jetbrains.kotlin:kotlin-test-junit:1.5.20'
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
+    testImplementation 'org.mockito:mockito-core:3.11.0'
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
+    testImplementation 'com.squareup.okhttp3:mockwebserver:3.11.0'
     testImplementation 'junit:junit:4.13.2'
+
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
